--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,15 +14,15 @@
     "next": "15.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "socket.io-client": "^4.8.1"
-  },
-  "devDependencies": {
+    "socket.io-client": "^4.8.1",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "typescript": "^5"
+  },
+  "devDependencies": {
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.5",
-    "tailwindcss": "^4.1.10",
-    "typescript": "^5"
+    "tailwindcss": "^4.1.10"
   }
 }
