--- a/scripts/translate-to-japanese/.env
+++ b/scripts/translate-to-japanese/.env
@@ -1,5 +1,5 @@
-# Gemini API設定 - 実際のAPIキーに置き換えてください
-GEMINI_API_KEY=your_gemini_api_key_here
+# Gemini API設定
+GEMINI_API_KEY=AIzaSyDsqG4mUGOjFrnAM18f65O-kr1nN50oMW0
 
 # 入力ファイルパス
 INPUT_CSV_PATH=../scrape-programming-languages/output/programming-languages.csv
