feat: 同期処理実装でレート制限対応
- BatchProcessor → SequentialProcessor に変更
- 5秒間隔設定 (Free Tier 15RPM対応)
- 429エラー専用ハンドリング強化
- テスト実行で100%成功率確認

--- a/scripts/translate-to-japanese/.env
+++ b/scripts/translate-to-japanese/.env
@@ -10,9 +10,9 @@ OUTPUT_CSV_FILENAME=programming-languages-ja.csv
 OUTPUT_STATS_FILENAME=translation-stats.json
 OUTPUT_ERRORS_FILENAME=errors.log
 
-# 処理設定
-BATCH_SIZE=25
-RATE_LIMIT_DELAY=1000
-MAX_RETRIES=3
-TEST_MODE=false
-TEST_LIMIT=10
+# 処理設定 (同期処理 + Free Tier対応)
+BATCH_SIZE=1
+RATE_LIMIT_DELAY=5000
+MAX_RETRIES=5
+TEST_MODE=true
+TEST_LIMIT=3
