feat: implement WanaKana real-time romaji input validation
✨ New Features:
- Add WanaKana library for Japanese romaji input handling
- Create WanaKanaValidator class with custom romaji variation mapping
- Implement useWanaKanaValidator React hook
- Add TypingInput component with real-time validation and suggestions
- Support romaji variations (sy/sh, ti/chi, zi/ji, etc.)

🔧 Game Integration:
- Replace legacy input field with TypingInput component
- Add real-time hiragana preview and validation feedback
- Show input suggestions for constraint turns
- Integrate with existing turn system and scoring

🎯 Validation Features:
- Real-time romaji to hiragana conversion
- Partial match suggestions
- Constraint character validation
- IT terms dictionary lookup
- Input assistance with next possible characters

📝 Note: Legacy session_id type issues remain to be fixed

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,8 @@
     "next": "15.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "wanakana": "^5.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
