--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,6 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "clsx": "^2.1.1",
     "jotai": "^2.12.5",
     "next": "15.3.3",
     "re-resizable": "^6.11.2",
@@ -27,7 +26,9 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
+    "clsx": "^2.1.1",
     "postcss": "^8.5.6",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.17"
   }
 }
